# compiling-to-assembly

./: $  .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  README.md  cabal.project  typescript.cabal
src/: ASM.hs  AST.hs  Lexer.hs  Parser.hs  TypeChecker.hs  Utils.hs
src/CodeGen/: ARM32.hs
test/: ASMTest.hs  Main.hs  ParserTest.hs  TCTest.hs  TestUtils.hs  Utils.hs
test/CodeGen/: ARM32Test.hs
test/golden/asm/: assert-negation.s  assert.s  block-and-infix.s  empty-main.s  if-and-labels  if-and-labels.s  var  while  while.s
test/golden/asm/arm32/: block-and-infix.s  empty-main.s  if-and-labels.s  var.s
